tests/expected_output/implicit_function_declaration/000000-clang-9.0-x86_64-pc-linux-gnu.txt
tests/extracted_compile_time_errors/implicit_function_declaration.c:3:2: warning: implicit declaration of function 'f' is invalid in C99 [-Wimplicit-function-declaration]
        f();
        ^
dcc explanation: you are calling a function named f line 3 of tests/extracted_compile_time_errors/implicit_function_declaration.c but dcc does not recognize f as a function.
There are several possible causes:
  a) You might have misspelt the function name.
  b) You might need to add a #include line at the top of tests/extracted_compile_time_errors/implicit_function_declaration.c.
  c) You might need to add a prototype for f.

/bin/ld: /tmp/implicit_function_declaration-d080fb.o: in function `main':
/home/andrewt/w/dcc/src/tests/extracted_compile_time_errors/implicit_function_declaration.c:3: undefined reference to `f'
clang: error: linker command failed with exit code 1 (use -v to see invocation)
